--- a/css/style_form.css
+++ b/css/style_form.css
@@ -1,14 +1,21 @@
-* {
-    margin: px;
-    padding: 0px;
+#menu {
+    background-image: url("/src/background_img.jpg");
+    font-weight: 100px;
+    font-style: italic;
+
+
 }
 
+.nav-link a {
+    color: black;
+    font-weight: bolder;
 
-#form_1 {
-    padding-top: 100px;
-    margin-top: 100px;
 }
 
-#title {
-    text-align: center;
+.container {
+    margin-top: 5%;
+}
+
+.card {
+    margin-top: 5%;
 }
